<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mandar_email"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloCorreo"
        android:gravity="center"
        android:textSize="30dp"
        android:padding="16dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tietNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Nombrecorreo"
        android:padding="16dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tietCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Emailcorreo"
        android:padding="16dp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tietMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Contenidocorreo"
        android:padding="16dp"
        />

    <Button
        android:id="@+id/bEnviarcoments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/textobuttoncorreo"
        android:background="@color/colorAccent"
        android:padding="16dp"
        />


</LinearLayout>